Fix dark mode of data table paginator

--- a/assets/scss/components/_table.scss
+++ b/assets/scss/components/_table.scss
@@ -21,5 +21,13 @@
             --bs-table-hover-bg: var(--bs-tertiary-bg);
             --bs-table-striped-color: var(--bs-body-color);
         }
+
+        .datatable-pagination-list-item {
+            &:hover,
+            &:focus,
+            &.datatable-active {
+                color: var(--bs-body-bg) !important;
+            }
+        } 
     }
 }
